trunk/Archive2/68/49a2e1846d023c/output
main.cpp:17:1: error: expected ';' after class definition
 }
 ^
